# takos-web

./: README.md  google-services.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json
public/: legacy_stylesheet.css  stylesheet.css
src/: App.css  App.tsx  index.tsx  testWebRTC.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/tauri-plugin-fcm/: Cargo.toml  package.json  pnpm-lock.yaml
src-tauri/tauri-plugin-fcm/android/: build.gradle.kts  kotlinSqlStore.md
src-tauri/tauri-plugin-fcm/android/src/androidTest/java/: ExampleInstrumentedTest.kt
src-tauri/tauri-plugin-fcm/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-fcm/android/src/main/java/: AndroidManifest.xml  NotificationHandler.kt  Plugin.kt  Service.kt
src-tauri/tauri-plugin-fcm/android/src/main/java/jp/takos/app/java/: MyFirebaseMessagingService.kt  sqlite.kt  store.kt
src-tauri/tauri-plugin-fcm/android/src/test/java/: ExampleUnitTest.kt
src-tauri/tauri-plugin-fcm/guest-js/: index.ts
src-tauri/tauri-plugin-fcm/ios/: Package.swift  README.md
src-tauri/tauri-plugin-fcm/ios/Sources/: FCMPlugin.swift
src-tauri/tauri-plugin-fcm/permissions/: default.toml
src-tauri/tauri-plugin-fcm/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-fcm/permissions/autogenerated/commands/: listener.toml
src-tauri/tauri-plugin-fcm/permissions/schemas/: schema.json
src-tauri/tauri-plugin-fcm/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/utils/: ws.ts  (+2 more)
(+63 files in other folders)
